<resources>
    <string name="app_name">PokemonApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_check_it_out">Check It Out</string>
    <string name="fragment_detail_hp_label">hp</string>
    <string name="fragment_detail_attack_label">attack</string>
    <string name="fragment_detail_defense_label">defense</string>
    <string name="fragment_detail_special_attack_label">special-attack</string>
    <string name="fragment_detail_special_defense_label">special-defense</string>
    <string name="fragment_detail_speed_label">speed</string>
</resources>