<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".presentation.ui.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/pokemonImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_color="@color/design_default_color_background"
            app:civ_border_width="3dp"
            app:civ_circle_background_color="@color/white" />

        <TextView
            android:id="@+id/pokemonType1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_hp_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/hp"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_attack_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/attack"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_defense_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/defense"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_special_attack_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/special_attack"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_special_defense_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/special_defense"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_speed_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/speed"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</LinearLayout>